[build-dependencies]
cc = { version = "1" }
pkg-config = "0.3"

[features]
edge = []

[lib]
name = "webview_sys"
path = "lib.rs"

[package]
authors = ["Boscop", "zxey <r.hozak@seznam.cz>"]
build = "build.rs"
categories = [
	"gui",
	"web-programming",
	"api-bindings",
	"rendering",
	"visualization",
]
description = "Rust native ffi bindings for webview"
edition = "2018"
keywords = ["web", "gui", "desktop", "electron", "webkit"]
license-file = "LICENSE"
links = "webview"
name = "webview-sys"
repository = "https://github.com/Boscop/web-view"
version = "0.5.0"

[target]

[target.'cfg(all(target_family = "unix", not(target_os = "macos")))']

[target.'cfg(all(target_family = "unix", not(target_os = "macos")))'.dependencies]
gdk-sys = "0.9"
gio-sys = "0.9"
glib-sys = "0.9"
gobject-sys = "0.9"
gtk-sys = "0.9"
javascriptcore-rs-sys = "0.2"
libc = { version = "0.2" }
webkit2gtk-sys = { version = "0.10", features = ["v2_8"] }
